# QuackMeUp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: main.yml
data/metabase/: metabase.sql
minio-data/.minio.sys/: format.json
minio-data/.minio.sys/buckets/: .usage.json
minio-data/.minio.sys/config/: config.json
minio-data/.minio.sys/config/iam/: format.json
minio-data/logs/date=2023-11-23/: 000000.parquet
minio-data/logs/date=2024-01-08/: 000000.parquet
scripts/: download_logs.sh
scripts/duckdb/: attach_postgres.sh  create_db.sh  create_tables.sh  drop_db.sh  import_logs.sh  start_cli.sh
scripts/hive/conf/: hive-site.xml
scripts/metabase/: Dockerfile_metabase  build_docker.sh  delete_pgdata.sh  export_db.sh  import_db.sh
scripts/presto/: README.md
scripts/presto/etc/: config.properties  hive.properties  node.properties
scripts/s3/: download_logs.sh
scripts/trino/: README.md
scripts/trino/etc/: config.properties  hive.properties  node.properties
src/: __init__.py  dirs.py  format_logs.py  format_logs_parquet.py  format_logs_test.py  logger.py  query_duckdb.py
src/log_exporter/: lambda_handler.py  lambda_handler_test.py
terraform/: .terraform.lock.hcl  .terraform.tfstate.lock.info  apply.sh  cloudwatch.tf  destroy.sh  ecr.tf  fmt.sh  init.no_backend.sh  init.sh  init.upgrade.sh  lambda.tf  locals.tf  log_exporter.tf  main.tf  plan.sh  providers.tf  s3.tf  transform_env.sh  validate.sh  variables.tf
(+9 files in other folders)
